# indexer-rs

./: .gitignore  Cargo.toml  README.md
src/: blocks.rs  blocks_observer.rs  main.rs  no_registry_contract.rs  signing_keys.rs
src/blocks/: block_watcher.rs  blocks_observer.rs  mod.rs  utils.rs
src/contracts/: mod.rs  no_registry_contract.rs
src/signing_keys/: keys_manager.rs  mod.rs  utils.rs
