[package]
name = "indexer-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.9.2", features = ["full"] }
dotenvy = "0.15.7"
eyre = "=0.3.7"
nanoid = "0.4.0"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
dotenv = "0.15.0"
futures = "0.3"
futures-util = "0.3"
once_cell = "1.8.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1.0"
